# workshop-bindinc-api

./: .gitignore  Dockerfile  build.sh  requirements.txt
chat_app/: app.py  download_files.sh  pyproject.toml
chat_app/notebooks/.ipynb_checkpoints/: ingestion-checkpoint.ipynb
data/index/: index.pkl
flaskapi/: app.py  pyproject.toml  test.py
flaskapi/data/index/: index.pkl
